# snake

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  PyBinding.cpp  main.cpp
.cache/clangd/index/: DrawAction.cpp.6E3D2A175EEF8EC2.idx  DrawAction.h.841B9EE4E55C6249.idx  DrawJob.h.D6FD7D3DDB4BE0AC.idx  IAction.h.E29A49E8AA128181.idx  IJob.h.15421AF378C19F83.idx  Log.h.592B82A67157EC7D.idx  Looper.h.880AC240C3432AC9.idx  PollEventJob.h.3C1AB9CDF878C647.idx  SDLInitializer.h.814C55CB51440845.idx  Scene.cpp.91EB2C3E3332AC98.idx  Scene.h.6AE5442045F3527B.idx  Type.h.15DBC0627B1DF25C.idx  main.cpp.ECC9890A58F260C6.idx
py_game/: snakeTest.py
src/: Game.cpp  Game.h  SDLInitializer.h  Scene.cpp  Scene.h  Type.h
src/looper/: DrawJob.cpp  DrawJob.h  IJob.h  Looper.h  PollEventJob.h
src/map_controller/: MapController.cpp  MapController.h
src/utils/: Log.h
utils/: Utils.h
